--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,18 +1,25 @@
-<%- include('partials/header') %>
+<%- include("partials/header"); -%>
 
-<h1>Home</h1>
-<p><%= homeStartingContent %></p>
+    <h1>Home</h1>
+    <p> <%= startingContent %> </p>
 
-<%  posts.forEach(function(post) { %>
-    <div>
-        <h1><%= post.title %></h1>
-        <p><%= post.content.slice(0,100) + "..." %>
-        <a href="/posts/<%= post.title%>">Read more</a>
+
+  <%  posts.forEach(function(post){ %>
+
+    <h1><%=post.title%></h1>
+    <% if (post) { %>
+        <p>
+            <% if (post.content && post.content.length > 100) { %>
+                <%= post.content.substring(0, 100) + " ..." %>
+            <% } else { %>
+                <%= post.content %>
+            <% } %>
+            <a href="/posts/<%= post._id %>">Read More</a>
         </p>
-    </div>
-<%  }) %>
+    <% } %>
 
 
+    <% }) %>
 
 
-<%- include('partials/footer') %>
+<%- include("partials/footer"); -%>
